# qt5-sectionwidget

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: application.cpp  application.h
src/gui/: mainwindow.cpp  mainwindow.h  sectionwidget.cpp  sectionwidget.h
